changed title and reverted to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hello, World!</title>
+    <title>Polar Paths</title>
   </head>
   <body>
     <p>It's a beautiful day to learn website development.</p>
