--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       <div class="right-side">
         <a href="">Polar Paths</a>
       </div>
-
       <div class="right-side">
         <a href="./explore/explore.html">Explore</a>
         <span>|</span>
@@ -24,6 +23,41 @@
         <a href="./account/account.html"><i class="fa-solid fa-user"></i></a>
       </div>
     </header>
-    <div class="main"></div>
+    <div class="main">
+      <div class="hero">
+        <img src="images/polar-paths-logo.png" alt="A polar bear holding a map, with the label 'Polar Paths'" width="50%">
+        <div class="hero-text">
+          <h1>Welcome to Polar Paths!</h1>
+          <p>Our mission is to encourage members of the Bowdoin community to use public transportation whenever possible.
+            This site is a hub where users can find information on Brunswick's public transport options, browse popular
+            destinations, and coordinate carpools to events. Want to contribute to our project? Head to "Suggest" in
+            the navigation bar or down below to recommend your own destinations.
+          </p>
+        </div>
+      </div>
+      <div class="bottom">
+        <h2>What can we help you with today?</h2>
+        <a href="./explore/explore.html">
+          <div class="card">
+            <span>Explore desintations</span>
+          </div>
+        </a>
+        <a href="./carpool/carpool.html">
+          <div class="card">
+            <span>Coordinate a carpool</span>
+          </div>
+        </a>
+        <a href="./info/info.html">
+          <div class="card">
+            <span>View public transport info</span>
+          </div>
+        </a>
+        <a href="./suggest/suggest.html">
+          <div class="card">
+            <span>Suggest a destination</span>
+          </div>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
