Completed basic CSS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <div class="main">
       <div class="hero">
-        <img src="images/polar-paths-logo.png" alt="A polar bear holding a map, with the label 'Polar Paths'" width="50%">
+        <img src="images/polar-paths-logo.png" alt="A polar bear holding a map, with the label 'Polar Paths'" width="30%">
         <div class="hero-text">
           <h1>Welcome to Polar Paths!</h1>
           <p>Our mission is to encourage members of the Bowdoin community to use public transportation whenever possible.
@@ -37,26 +37,32 @@
       </div>
       <div class="bottom">
         <h2>What can we help you with today?</h2>
-        <a href="./explore/explore.html">
-          <div class="card">
-            <span>Explore desintations</span>
-          </div>
-        </a>
-        <a href="./carpool/carpool.html">
-          <div class="card">
-            <span>Coordinate a carpool</span>
-          </div>
-        </a>
-        <a href="./info/info.html">
-          <div class="card">
-            <span>View public transport info</span>
-          </div>
-        </a>
-        <a href="./suggest/suggest.html">
-          <div class="card">
-            <span>Suggest a destination</span>
-          </div>
-        </a>
+        <div class="cards">
+          <a href="./explore/explore.html">
+            <div class="card">
+              <span>Explore desintations</span>
+              <i class="fa-solid fa-magnifying-glass fa-5x icon"></i>
+            </div>
+          </a>
+          <a href="./carpool/carpool.html">
+            <div class="card">
+              <span>Coordinate a carpool</span>
+              <i class="fa-solid fa-car-side fa-5x icon"></i>
+            </div>
+          </a>
+          <a href="./info/info.html">
+            <div class="card">
+              <span>View public transport info</span>
+              <i class="fa-solid fa-circle-info fa-5x icon"></i>
+            </div>
+          </a>
+          <a href="./suggest/suggest.html">
+            <div class="card">
+              <span>Suggest a destination</span>
+              <i class="fa-solid fa-hand-holding-heart fa-5x icon"></i>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
   </body>
