explore page prototype

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
         <a href="./account/account.html"><i class="fa-solid fa-user"></i></a>
       </div>
     </header>
-    <div class="main"></div>
+    <div class="main">
+      <div class="search-container">
+        <span><i class="fa-solid fa-magnifying-glass"></i></span>
+        <span>Search a destination...</span>
+        <h1>Hello</h1>
+      </div>
+    </div>
   </body>
 </html>
