--- a/carpool/carpool.html
+++ b/carpool/carpool.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Carpool Page</title>
-    <link rel = "stylesheet" href = "stylesheets/carpool.css">
+    <link rel = "stylesheet" href = "style.css">
   </head>
   <body>
     <header>
         <div class="right-side">
-          <a href="">Polar Paths</a>
+          <a href="../index.html">Polar Paths</a>
         </div>
   
         <div class="right-side">
-          <a href="./explore/explore.html">Explore</a>
+          <a href="../explore/explore.html">Explore</a>
           <span>|</span>
-          <a href="./carpool/carpool.html">Carpool</a>
+          <a href="">Carpool</a>
           <span>|</span>
-          <a href="./info/info.html">Info</a>
+          <a href="../info/info.html">Info</a>
           <span>|</span>
-          <a href="./suggest/suggest.html">Suggest</a>
+          <a href="../suggest/suggest.html">Suggest</a>
           <span>|</span>
           <a href="./account/account.html"><i class="fa-solid fa-user"></i></a>
         </div>
