--- a/info/info.html
+++ b/info/info.html
@@ -9,19 +9,19 @@
   <body>
     <header>
       <div>
-        <a href="">Polar Paths</a>
+        <a href="../index.html">Polar Paths</a>
       </div>
 
       <div class="right-side">
-        <a href="./explore/explore.html">Explore</a>
+        <a href="../explore/explore.html">Explore</a>
         <span>|</span>
-        <a href="./carpool/carpool.html">Carpool</a>
+        <a href="../carpool/carpool.html">Carpool</a>
         <span>|</span>
-        <a href="./info/info.html">Info</a>
+        <a href="">Info</a>
         <span>|</span>
-        <a href="./suggest/suggest.html">Suggest</a>
+        <a href="../suggest/suggest.html">Suggest</a>
         <span>|</span>
-        <a href="./account/account.html"><i class="fa-solid fa-user"></i></a>
+        <a href="../account/account.html"><i class="fa-solid fa-user"></i></a>
       </div>
     </header>
 
