Fixed header across pages

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Polar Paths</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header_styles.css">
     <script src="https://kit.fontawesome.com/fe2476605d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
