--- a/suggest/suggest.html
+++ b/suggest/suggest.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <title>Polar Paths - Suggest a Destination</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../header_styles.css">
     <script src="https://kit.fontawesome.com/fe2476605d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
-      <div class="right-side">
+      <div class="header-left">
         <a href="../index.html">Polar Paths</a>
       </div>
-      <div class="right-side">
+      <div class="header-right">
         <a href="../explore/explore.html">Explore</a>
         <span>|</span>
         <a href="../carpool/carpool.html">Carpool</a>
@@ -20,7 +24,7 @@
         <span>|</span>
         <a href="">Suggest</a>
         <span>|</span>
-        <a href="./account/account.html"><i class="fa-solid fa-user"></i></a>
+        <a href="../account/account.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
     <div class="form-container">
