Added hover effects, updated form confirmation message

--- a/info/info.html
+++ b/info/info.html
@@ -20,7 +20,7 @@
         <span>|</span>
         <a href="../carpool/carpool.html">Carpool</a>
         <span>|</span>
-        <a href="">Info</a>
+        <a href="" id="current-page">Info</a>
         <span>|</span>
         <a href="../suggest/suggest.html">Suggest</a>
         <span>|</span>
