--- a/carpool/carpool.html
+++ b/carpool/carpool.html
@@ -18,7 +18,7 @@
         <div class="header-right">
           <a href="../explore/explore.html">Explore</a>
           <span>|</span>
-          <a href="">Carpool</a>
+          <a href="" id="current-page">Carpool</a>
           <span>|</span>
           <a href="../info/info.html">Info</a>
           <span>|</span>
