--- a/explore/explore.html
+++ b/explore/explore.html
@@ -16,7 +16,7 @@
         <a href="../index.html">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="">Explore</a>
+        <a href="" id="current-page">Explore</a>
         <span>|</span>
         <a href="../carpool/carpool.html">Carpool</a>
         <span>|</span>
