--- a/suggest/suggest.html
+++ b/suggest/suggest.html
@@ -22,7 +22,7 @@
         <span>|</span>
         <a href="../info/info.html">Info</a>
         <span>|</span>
-        <a href="">Suggest</a>
+        <a href="" id="current-page">Suggest</a>
         <span>|</span>
         <a href="../account/account.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
@@ -31,8 +31,8 @@
       <h1>Suggest a Destination!</h1>
       <h2>Please fill out the information below to submit your own destinations/routes to Polar Paths.</h2>
     </div>
-    <div class="form-container">
-      <form>
+    <div id="form-container">
+      <form id="form">
         <label for="firstName">Name (optional)</label>
         <input type="text" class="text-input" id="firstName" placeholder="Enter your name">
 
@@ -55,8 +55,10 @@
           <input id="submit" type="submit">
         </div>
       </form>
-      
-      <!-- <div id="emailInstructions" style="margin-top: 20px; font-size: 16px; color: #190C00;"></div> -->
+      <div id="confirmation-message" style="display: none;">
+        <h2>Thank you! Your form has been submitted.</h2>
+        <a id="new-form-button" href="">Submit another form</a>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
