beautified the suggest and homepage

--- a/index.html
+++ b/index.html
@@ -16,26 +16,23 @@
         <a href="">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="./explore/explore.html">Explore</a>
+        <a href="./explore/explore.html">Peruse</a>
         <span>|</span>
-        <a href="./carpool/carpool.html">Carpool</a>
+        <a href="./carpool/carpool.html">Plan</a>
         <span>|</span>
-        <a href="./info/info.html">Info</a>
+        <a href="./info/info.html">Public</a>
         <span>|</span>
-        <a href="./suggest/suggest.html">Suggest</a>
+        <a href="./suggest/suggest.html">Post</a>
         <span>|</span>
-        <a href="./account/account.html"><i class="fa-solid fa-user-circle"></i></a>
+        <a href="./sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
     <div class="main">
       <div class="hero">
         <img src="images/polar-paths-logo.png" alt="A polar bear holding a map, with the label 'Polar Paths'" width="30%">
         <div class="hero-text">
-          <h1>Welcome to Polar Paths!</h1>
-          <p>Our mission is to encourage members of the Bowdoin community to use public transportation whenever possible.
-            This site is a hub where users can find information on Brunswick's public transport options, browse popular
-            destinations, and coordinate carpools to events. Want to contribute to our project? Head to "Suggest" in
-            the navigation bar or down below to recommend your own destinations.
+          <h1>Welcome to Polar Paths</h1>
+          <p class="slogan">What's your path?
           </p>
         </div>
       </div>
@@ -44,25 +41,29 @@
         <div class="cards">
           <a href="./explore/explore.html">
             <div class="card">
-              <span>Explore desintations</span>
+              <span>Peruse</span>
+              <p class="hover-text">explore destinations</p>
               <i class="fa-solid fa-magnifying-glass fa-5x icon"></i>
             </div>
           </a>
           <a href="./carpool/carpool.html">
             <div class="card">
-              <span>Coordinate a carpool</span>
+              <span>Plan</span>
+              <p class="hover-text">plan/post a carpool</p>
               <i class="fa-solid fa-car-side fa-5x icon"></i>
             </div>
           </a>
           <a href="./info/info.html">
             <div class="card">
-              <span>View public transport info</span>
+              <span>Public</span>
+              <p class="hover-text">view public transport info</p>
               <i class="fa-solid fa-circle-info fa-5x icon"></i>
             </div>
           </a>
           <a href="./suggest/suggest.html">
             <div class="card">
-              <span>Suggest a destination</span>
+              <span>Post</span>
+              <p class="hover-text">suggest a destination</p>
               <i class="fa-solid fa-hand-holding-heart fa-5x icon"></i>
             </div>
           </a>
