--- a/suggest/suggest.html
+++ b/suggest/suggest.html
@@ -16,19 +16,19 @@
         <a href="../index.html">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="../explore/explore.html">Explore</a>
+        <a href="../explore/explore.html">Peruse</a>
         <span>|</span>
-        <a href="../carpool/carpool.html">Carpool</a>
+        <a href="../carpool/carpool.html">Plan</a>
         <span>|</span>
-        <a href="../info/info.html">Info</a>
+        <a href="../info/info.html">Public</a>
         <span>|</span>
-        <a href="" id="current-page">Suggest</a>
+        <a href="" id="current-page">Post</a>
         <span>|</span>
-        <a href="../account/account.html"><i class="fa-solid fa-user-circle"></i></a>
+        <a href="./sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
     <div class="hero">
-      <h1>Suggest a Destination!</h1>
+      <h1>Post a Destination!</h1>
       <h2>Please fill out the information below to submit your own destinations/routes to Polar Paths.</h2>
     </div>
     <div id="form-container">
