--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </p>
         </div>
       </div>
-      <!-- <div class="bottom">
+      <div class="bottom">
         <h2>What can we help you with today?</h2>
         <div class="cards">
           <a href="./explore/explore.html">
@@ -68,7 +68,7 @@
             </div>
           </a>
         </div>
-      </div> -->
+      </div>
     </div>
   </body>
 </html>
