--- a/carpool/carpool.html
+++ b/carpool/carpool.html
@@ -12,21 +12,21 @@
   </head>
   <body>
     <header>
-        <div class="header-left">
-          <a href="../index.html">Polar Paths</a>
-        </div>
-        <div class="header-right">
-          <a href="../explore/explore.html">Explore</a>
-          <span>|</span>
-          <a href="" id="current-page">Carpool</a>
-          <span>|</span>
-          <a href="../info/info.html">Info</a>
-          <span>|</span>
-          <a href="../suggest/suggest.html">Suggest</a>
-          <span>|</span>
-          <a href="../account/account.html"><i class="fa-solid fa-user-circle"></i></a>
-        </div>
-      </header>
+      <div class="header-left">
+        <a href="../index.html">Polar Paths</a>
+      </div>
+      <div class="header-right">
+        <a href="./explore/explore.html">Peruse</a>
+        <span>|</span>
+        <a href="" id="current-page">Plan</a>
+        <span>|</span>
+        <a href="./info/info.html">Public Info</a>
+        <span>|</span>
+        <a href="./suggest/suggest.html">Post</a>
+        <span>|</span>
+        <a href="./sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
+      </div>
+    </header>
 
     <div class= "live-posts-section">
     <h1 style = "text-align: center;">Live Posts</h1>
