--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <span>|</span>
         <a href="./carpool/carpool.html">Plan</a>
         <span>|</span>
-        <a href="./info/info.html">Public</a>
+        <a href="./info/info.html">Public Info</a>
         <span>|</span>
         <a href="./suggest/suggest.html">Post</a>
         <span>|</span>
@@ -55,7 +55,7 @@
           </a>
           <a href="./info/info.html">
             <div class="card">
-              <span>Public</span>
+              <span>Public Info</span>
               <p class="hover-text">view public transport info</p>
               <i class="fa-solid fa-circle-info fa-5x icon"></i>
             </div>
