--- a/explore/explore.html
+++ b/explore/explore.html
@@ -22,7 +22,7 @@
         <span>|</span>
         <a href="../info/info.html">Public Info</a>
         <span>|</span>
-        <a href="./suggest/suggest.html">Post</a>
+        <a href="../suggest/suggest.html">Post</a>
         <span>|</span>
         <a href="../sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
