--- a/info/info.html
+++ b/info/info.html
@@ -16,15 +16,15 @@
         <a href="../index.html">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="./explore/explore.html">Peruse</a>
+        <a href="../explore/explore.html">Peruse</a>
         <span>|</span>
-        <a href="./carpool/carpool.html">Plan</a>
+        <a href="../carpool/carpool.html">Plan</a>
         <span>|</span>
         <a href="" id="current-page">Public Info</a>
         <span>|</span>
-        <a href="./suggest/suggest.html">Post</a>
+        <a href="../suggest/suggest.html">Post</a>
         <span>|</span>
-        <a href="./sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
+        <a href="../sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
 
