renamed sorry to login

--- a/suggest/suggest.html
+++ b/suggest/suggest.html
@@ -24,7 +24,7 @@
         <span>|</span>
         <a href="" id="current-page">Post</a>
         <span>|</span>
-        <a href="../sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
+        <a href="../login/login.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
     <div class="hero">
