fixed buttons, kinda

--- a/info/info.html
+++ b/info/info.html
@@ -28,7 +28,8 @@
       </div>
     </header>
 
-    <!-- add the title of the page -->
+    <div class="main">
+      <!-- add the title of the page -->
     <div class="pageTitle"><h1>Brunswick Public Transit Info</h1></div> 
 
     <!-- use a flexbox grid to display the transit options -->
@@ -98,7 +99,8 @@
       </div>
 
     </div> 
+    </div>
 
-    <div class="main"></div>
+    
   </body>
 </html>
