--- a/explore/explore.html
+++ b/explore/explore.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Polar Paths</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../header_styles.css">
-    <script src="https://kit.fontawesome.com/fe2476605d.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../header_styles.css" />
+    <script
+      src="https://kit.fontawesome.com/fe2476605d.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
     <script type="module" src="script.js"></script>
   </head>
   <body>
@@ -25,10 +31,13 @@
         <span>|</span>
         <a href="../suggest/suggest.html">Post</a>
         <span>|</span>
-        <a href="../sorry/sorry.html"><i class="fa-solid fa-user-circle"></i></a>
+        <a href="../sorry/sorry.html"
+          ><i class="fa-solid fa-user-circle"></i
+        ></a>
       </div>
     </header>
-    <main>
+    <div class="main">
+      <h1>Explore Destinations</h1>
       <!-- <div class="search-container">
         <span><i class="fa-solid fa-magnifying-glass"></i></span>
         <input type="text" placeholder="Search a destination...">
@@ -36,19 +45,24 @@
 
       <div class="content">
         <div class="cards-container">
-          <h1>Results</h1>
-          <div class="cards-flex" id="cardsFlex">
-          </div>
+          <h2 id="results-title">Results</h1>
+          <div class="cards-flex" id="cardsFlex"></div>
         </div>
 
-       <!-- Map content: adapted from https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#step-3 -->
-      <div id="map-stuff"></div>
-        <gmp-map id="gmap" center="45.25, -69.4" zoom="6.85" map-id="DEMO_MAP_ID" style="height: 600px"></gmp-map>
+        <!-- Map content: adapted from https://developers.google.com/maps/documentation/javascript/add-google-map-wc-tut#step-3 -->
+        <div id="map-stuff"></div>
+        <gmp-map
+          id="gmap"
+          center="45.25, -69.4"
+          zoom="6.85"
+          map-id="DEMO_MAP_ID"
+          style="height: 600px"
+        ></gmp-map>
       </div>
-    </main>
+    </div>
     <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOy-ec-SPsOPLTJHOwcKmvze3Ke7abDr4&libraries=maps,marker"
-          defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDOy-ec-SPsOPLTJHOwcKmvze3Ke7abDr4&libraries=maps,marker"
+      defer
     ></script>
   </body>
 </html>
