General fixes, implemented more backend, UI adjustments

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <a href="">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="./explore/explore.html">Peruse</a>
+        <a href="./explore/explore.html">Explore</a>
         <span>|</span>
-        <a href="./carpool/carpool.html">Plan</a>
+        <a href="./carpool/carpool.html">Plan Carpool</a>
         <span>|</span>
-        <a href="./info/info.html">Public Info</a>
+        <a href="./info/info.html">Transit Info</a>
         <span>|</span>
-        <a href="./suggest/suggest.html">Post</a>
+        <a href="./suggest/suggest.html">Suggest</a>
         <span>|</span>
         <a href="./login/login.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
@@ -42,28 +42,28 @@
           <a href="./explore/explore.html">
             <div class="card">
               <span>Explore Destinations</span>
-              <p class="hover-text">explore destinations</p>
+              <!-- <p class="hover-text">explore destinations</p> -->
               <i class="fa-solid fa-magnifying-glass fa-5x icon"></i>
             </div>
           </a>
           <a href="./carpool/carpool.html">
             <div class="card">
               <span>Plan a Carpool</span>
-              <p class="hover-text">plan/post a carpool</p>
+              <!-- <p class="hover-text">plan/post a carpool</p> -->
               <i class="fa-solid fa-car-side fa-5x icon"></i>
             </div>
           </a>
           <a href="./info/info.html">
             <div class="card">
               <span>Public Transit Info</span>
-              <p class="hover-text">view public transport info</p>
+              <!-- <p class="hover-text">view public transport info</p> -->
               <i class="fa-solid fa-circle-info fa-5x icon"></i>
             </div>
           </a>
           <a href="./suggest/suggest.html">
             <div class="card">
               <span>Suggest a Destination</span>
-              <p class="hover-text">suggest a destination</p>
+              <!-- <p class="hover-text">suggest a destination</p> -->
               <i class="fa-solid fa-hand-holding-heart fa-5x icon"></i>
             </div>
           </a>
