--- a/info/info.html
+++ b/info/info.html
@@ -16,30 +16,28 @@
         <a href="../index.html">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="../explore/explore.html">Peruse</a>
+        <a href="../explore/explore.html">Explore</a>
         <span>|</span>
-        <a href="../carpool/carpool.html">Plan</a>
+        <a href="../carpool/carpool.html">Plan Carpool</a>
         <span>|</span>
-        <a href="" id="current-page">Public Info</a>
+        <a href="" id="current-page">Transit Info</a>
         <span>|</span>
-        <a href="../suggest/suggest.html">Post</a>
+        <a href="../suggest/suggest.html">Suggest</a>
         <span>|</span>
         <a href="../login/login.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
     </header>
 
     <div class="main">
-      <!-- add the title of the page -->
     <div class="pageTitle"><h1>Brunswick Public Transit Info</h1></div> 
-
-    <!-- use a flexbox grid to display the transit options -->
+    
     <div class="containerGrid">
 
       <!-- 1. Amtrak -->
       <div class="boxForTransitOption">
         <h2 class="individualTransitOptionTitle">Amtrak Downeaster</h2>
         <div class="contentWithinBox">
-          <img id="gridImageAmtrak" src="assets/amtrak_downeaster.jpg" alt="Amtrak Train">
+          <img class="gridImage" id="gridImageAmtrak" src="assets/amtrak_downeaster.jpg" alt="Amtrak Train">
           <div id = "rightSideContentWithinBoxAmtrak"> 
             <p class="individualTransitOptionDescription">The Amtrak Downeaster runs along the coast from Brunswick to Boston.</p>
             <div class="infoLinks">
@@ -55,7 +53,7 @@
       <div class="boxForTransitOption">
         <h2 class="individualTransitOptionTitle">BREEZ Bus</h2>
         <div class="contentWithinBox">
-          <img id="gridImageBREEZ" src="assets/breez_bus.jpg" alt="Breez Bus">
+          <img class="gridImage" id="gridImageBREEZ" src="assets/breez_bus.jpg" alt="Breez Bus">
           <div id = "rightSideContentWithinBoxBreez"> 
             <p class="individualTransitOptionDescription">BREEZ connects Brunswick with Freeport, Yarmouth, and Portland.</p>
             <div class="infoLinks">
@@ -72,7 +70,7 @@
       <div class="boxForTransitOption">
         <h2 class="individualTransitOptionTitle">Brunswick Link</h2>
         <div class="contentWithinBox">
-          <img id="gridImageLink" src="assets/brunswick_link.jpg" alt="Brunswick Link">
+          <img class="gridImage" id="gridImageLink" src="assets/brunswick_link.jpg" alt="Brunswick Link">
           <div id = "rightSideContentWithinBoxBrunswickLink"> 
             <p class="individualTransitOptionDescription">The Brunswick Link has several stops in Brunswick, and is currently free!</p>
             <div class="infoLinks">
@@ -87,7 +85,7 @@
       <div class="boxForTransitOption">
         <h2 class="individualTransitOptionTitle">Concord Coach</h2>
         <div class="contentWithinBox">
-          <img id="gridImageLink" src="assets/concord_coach.jpg" alt="Concord Coach">
+          <img class="gridImage" id="gridImageLink" src="assets/concord_coach.jpg" alt="Concord Coach">
           <div id = "rightSideContentWithinBoxConcordCoach"> 
             <p class="individualTransitOptionDescription">The Concord Coach connects Portland and Boston.</p>
             <div class="infoLinks">
