--- a/login/login.html
+++ b/login/login.html
@@ -17,13 +17,13 @@
             <a href="../index.html">Polar Paths</a>
         </div>
         <div class="header-right">
-            <a href="../explore/explore.html">Peruse</a>
+            <a href="../explore/explore.html">Explore</a>
             <span>|</span>
-            <a href="../carpool/carpool.html">Plan</a>
+            <a href="../carpool/carpool.html">Plan Carpool</a>
             <span>|</span>
-            <a href="../info/info.html">Public Info</a>
+            <a href="../info/info.html">Transit Info</a>
             <span>|</span>
-            <a href="../suggest/suggest.html">Post</a>
+            <a href="../suggest/suggest.html">Suggest</a>
             <span>|</span>
             <a href="" id="current-page"><i class="fa-solid fa-user-circle"></i></a>
         </div>
