--- a/explore/explore.html
+++ b/explore/explore.html
@@ -23,13 +23,13 @@
         <a href="../index.html">Polar Paths</a>
       </div>
       <div class="header-right">
-        <a href="" id="current-page">Peruse</a>
+        <a href="" id="current-page">Explore</a>
         <span>|</span>
-        <a href="../carpool/carpool.html">Plan</a>
+        <a href="../carpool/carpool.html">Plan Carpool</a>
         <span>|</span>
-        <a href="../info/info.html">Public Info</a>
+        <a href="../info/info.html">Transit Info</a>
         <span>|</span>
-        <a href="../suggest/suggest.html">Post</a>
+        <a href="../suggest/suggest.html">Suggest</a>
         <span>|</span>
         <a href="../login/login.html"><i class="fa-solid fa-user-circle"></i></a>
       </div>
